# netcdf-c

./: .clang-tidy  .codespellrc  .dockerignore  .editorconfig  .gitignore  .travis.yml  BRANCH-STATUS  CITATION.cff  CMakeInstallation.cmake  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPILE.cmake.txt  COMPILE_CMake.txt  CONTRIBUTING.html  CONTRIBUTING.md  COPYRIGHT  CTestConfig.cmake  CTestConfig.cmake.in  CTestCustom.cmake  CTestCustom.cmake.in  Doxyfile  Doxyfile.developer  Doxyfile.ward  FixBundle.cmake.in  GH149.md  INSTALL  INSTALL.cmake  INSTALL.md  Make0  Makefile.am  Makefile.in  PostInstall.cmake  Project.xml  README-SVN-TRANSITION-TO-GITHUB.txt  README.md  RELEASE_NOTES  RELEASE_NOTES.md  TODO  Vagrantfile  acinclude.m4  (+98 more)
dap4_test/: CMakeLists.txt  Make0  Makefile.am  Makefile.in  bt.sh.txt  build.sh  d4manifest.sh  d4test_common.sh  dump.c  findtestserver4.c  maketests.sh  pingurl4.c  t_dmr.h  t_dmrdata.c  t_dmrdata.sh  t_dmrmeta.c  t_dmrmeta.sh  t_dmrparse.c  t_dmrparse.sh  test_common.h  test_constraints.sh  test_dap4url.sh  test_data.c  test_data.sh  test_earthdata.sh  test_environment4.c  test_fillmismatch.sh  test_hyrax.sh  test_meta.c  test_meta.sh  test_parse.c  test_parse.sh  test_raw.sh  test_rcparam.sh  test_remote.sh  test_test.sh  test_thredds.sh  tst_data.sh  tst_meta.sh  tst_parse.sh  (+1 more)
docs/: .gitignore  CMakeLists.txt  COPYRIGHT.md  DAP2.dox  DAP4.dox  DAP4.md  Doxyfile.developer  Doxyfile.guide.in  Doxyfile.in  Doxyfile.tutorial.in  FAQ.md  Makefile.am  Makefile.in  OPeNDAP.dox  all-error-codes.md  appendices.md  attribute_conventions.md  auth.html  auth.md  auth.md.in  bestpractices.md  building-with-autotools.md  building-with-cmake.md  byterange.dox  byterange.md  cdl.dox  cloud.md  cmake_faq.md  credits.md  custom_style.css  developer_header.html  dispatch.dox  dispatch.md  dispatchers.md  errors.dox.old  esg.html  esg.md  fan_utils.md  file_format_specifications.md  filter_quickstart.md  (+47 more)
examples/: CMakeLists.txt  Makefile.am  Makefile.in
fuzz/: CMakeLists.txt  Makefile.am  fuzz_open.c
h5_test/: CMakeLists.txt  Makefile.am  Makefile.in  h5_err_macros.h  run_h5_zstd_tests.sh  run_par_tests.sh  run_par_tests.sh.in  run_valgrind_tests.sh  run_zstd_tests.sh  tst_endian_float.c  tst_h5_open_close.c  tst_h_atts.c  tst_h_atts3.c  tst_h_atts4.c  tst_h_compounds.c  tst_h_compounds2.c  tst_h_dimscales.c  tst_h_dimscales1.c  tst_h_dimscales2.c  tst_h_dimscales3.c  tst_h_dimscales4.c  tst_h_endian_float.c  tst_h_enums.c  tst_h_files.c  tst_h_files2.c  tst_h_files4.c  tst_h_grps.c  tst_h_ints.c  tst_h_mem.c  tst_h_opaques.c  tst_h_par.c  tst_h_par_compress.c  tst_h_rd_cmp.c  tst_h_rename.c  tst_h_strings.c  tst_h_strings1.c  tst_h_strings2.c  tst_h_vars.c  tst_h_vars2.c  tst_h_vars3.c  (+4 more)
hdf4_test/: CMakeLists.txt  Makefile.am  Makefile.in  run_get_hdf4_files.sh  tst_chunk_hdf4.c  tst_formatx_hdf4.sh  tst_h4_lendian.c  tst_hdf4_extra.c  tst_interops2.c  tst_interops3.c
include/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  XGetopt.h  bget.h  ceconstraints.h  err_macros.h  ezxml.h  fbits.h  hdf4dispatch.h  hdf5dispatch.h  hdf5internal.h  isnan.h  nc.h  nc3dispatch.h  nc3internal.h  nc4compress.h  nc4dispatch.h  nc4internal.h  nc4xinternal.h  nc_hashmap.h  nc_logging.h  nc_provenance.h  nc_tests.h  nc_uri.h  nc_url.h  ncalign.h  ncauth.h  ncaux.h  ncauxinternal.h  ncaws.h  ncbytes.h  ncconfigure.h  nccrc.h  ncdap.h  ncdimscale.h  ncdispatch.h  ncexhash.h  ncexternl.h  (+52 more)
libcdmr/: CMakeLists.txt  Make0  Makefile.am  Makefile.in  ast_byteio.c  ast_byteio.h  ast_curl.c  ast_debug.c  ast_debug.h  ast_internal.c  ast_internal.h  ast_runtime.c  ast_runtime.h  augmentc.sed  augmenth.sed  cce.y  cceconstraints.c  cceconstraints.h  cceparse.c  cceparselex.h  ccetab.c  crdebug.c  crdebug.h  crgetvara.c  crmeta.c  crmeta.h  crutil.c  crutil.h  curlwrap.c  curlwrap.h  env  extends.sed  includes.h  ncStreamx.c  ncStreamx.h  ncStreamx.proto  ncaux.c  nccr.c  nccr.h  nccrconstraints.c  (+26 more)
libdap2/: CMakeLists.txt  Make0  Makefile.am  Makefile.in  cache.c  cdf.c  cdf3.c  cdf4.c  common.c  common34.c  constraints.c  constraints.h  constraints3.c  constraints3.h  constraints4.c  dapalign.c  dapalign.h  dapattr.c  dapattr3.c  dapcvt.c  dapdebug.c  dapdebug.h  dapdump.c  dapdump.h  dapincludes.h  dapnc.h  dapodom.c  dapodom.h  daputil.c  daputil.h  dce.tab.c  dce.tab.h  dce.y  dceconstraints.c  dceconstraints.h  dcelex.c  dceparse.c  dceparselex.h  dcetab.c  dcetab.h  (+26 more)
libdap4/: CMakeLists.txt  Make0  Makefile.am  Makefile.in  d4bytes.c  d4bytes.h  d4chunk.c  d4chunk.h  d4crc32.c  d4curlflags.c  d4curlfunctions.c  d4curlfunctions.h  d4cvt.c  d4data.c  d4debug.c  d4debug.h  d4dump.c  d4file.c  d4fix.c  d4http.c  d4http.h  d4includes.h  d4mem.c  d4meta.c  d4odom.c  d4odom.h  d4parser.c  d4printer.c  d4rc.c  d4read.c  d4read.h  d4serial.c  d4swap.c  d4util.c  d4util.h  d4varx.c  ezxml.c  ezxml.h  ncd4.h  ncd4dispatch.c  (+2 more)
libdiskless/: Makefile.am  ncdattr.c  ncddim.c  ncddispatch.c  ncddispatch.h  ncdfile.c  ncdfunc.c  ncdgrp.c  ncdinternal.c  ncdtype.c  ncdvar.c
libdispatch/: CMakeLists.txt  Makefile.am  Makefile.in  XGetopt.c  att.c  attinq.c  awsincludes.h  copy.c  crc32.c  dap.c  dapi.c  datt.c  dattget.c  dattinq.c  dattput.c  dauth.c  daux.c  daws.c  dcompound.c  dcopy.c  dcrc32.c  dcrc64.c  ddim.c  ddispatch.c  defcheck.c  denum.c  derror.c  dfile.c  dfilter.c  dfilterx.c  dglob.c  dglobal.c  dgroup.c  dhttp.c  dim.c  dinfermodel.c  dinstance.c  dinstance_intern.c  dinternal.c  dispatch.c  (+92 more)
libhdf4/: CMakeLists.txt  Makefile.am  Makefile.in  hdf4attr.c  hdf4dim.c  hdf4dispatch.c  hdf4file.c  hdf4func.c  hdf4grp.c  hdf4type.c  hdf4var.c  ninotnc3.c  ninotnc4.c
libhdf5/: CMakeLists.txt  H5FDhttp.c  H5FDhttp.h  Makefile.am  Makefile.in  hdf5_ros3_path.c  hdf5_ros3_path.h  hdf5attr.c  hdf5cache.c  hdf5create.c  hdf5debug.c  hdf5debug.h  hdf5dim.c  hdf5dispatch.c  hdf5err.h  hdf5file.c  hdf5filter.c  hdf5grp.c  hdf5internal.c  hdf5open.c  hdf5plugins.c  hdf5set_format_compatibility.c  hdf5type.c  hdf5var.c  nc4hdf.c  nc4info.c  nc4mem.c  nc4memcb.c
liblib/: CMakeLists.txt  (+10 more)
(+3313 files in other folders)
