requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netcdf-c-testing-tools"
version = "0.1.0"
description = "Script to create Zarr datasets using zarr-python"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">= 3.10"
dependencies = [
    "argparse",
    "zarr==2.18.2",
    "xarray==2025.1.1",
    "numcodecs",
    "scipy",
]

[tool.setuptools]
packages = ["pythontools"]

[project.scripts]
testing-tools = "pythontools.main:run"